--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/ufsmooc
-spring.datasource.username=postgres
-spring.datasource.password=123
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/ufsmooc
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
