--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ufsmooc
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
