--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8093
